# gpa-mcp

./: .gitignore  README.md  pyproject.toml
docs/: renderdoc_to_gpa_gap_analysis.md
fixtures/: eid_481.json  export_texture_474.json  find_drawindexed.json  open_bf1.json  shader_481_ps.json  texture_954.json
plugins/gpa_mcp_export/: __init__.py
probe_outputs/: bf1_capability_probe.json  bf1_capability_probe_named.json
probes/gpa_capability_probe/: __init__.py
src/gpa_mcp/: __init__.py
src/gpa_mcp/core/: __init__.py  adapter.py
src/gpa_mcp/gpa_plugins/: __init__.py
src/gpa_mcp/gpa_plugins/gpa_mcp_export/: __init__.py
src/gpa_mcp/gpa_plugins/gpa_texture_export/: __init__.py
src/gpa_mcp/server/: __init__.py  runtime.py
