[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpa-mcp"
version = "0.1.0"
description = "Minimal Intel GPA MCP for .gpa_frame analysis"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.2.0",
]

[project.scripts]
gpa-mcp = "gpa_mcp.server.runtime:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
